# selection

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  aarch64-unknown-none-elf.json  armv7-unknown-none-eabi.json  armv7-unknown-none-eabihf.json  artifact-frontend.wasm  initial.json  x86_64-unknown-none-elf.json
.art/: settings.toml
ci/: install_artifact
design/: cargocmd.md  kernel.md  loader.md  purpose.md  rootserver.md  sel4plat.md  sel4sys.md
docs/: Addendum.html  ArtifactIntro.html  BestPractices.html  CheatSheet.html  CleaningUp.html  Design.html  DetailedDesign.html  ExampleFile.html  ExportingHtml.html  FAQ.html  Feedback.html  Finishing.html  Implementation.html  Installation.html  Introduction.html  License.html  Purpose.html  RunningTests.html  SPECIFICATION.html  SimpleQuality.html  StartingProject.html  TODO.html  Tools.html  Vocabulary.html  index.html  print.html
elf-preload/: Cargo.toml  Makefile.toml
elf-preload/src/: arch.rs  error.rs  input.rs  layout.rs  lib.rs  output.rs
elf-preload/src/layout/: strategy.rs
elf-preload/test_data/: kernel.elf  smoketest
elf-preload/tests/: elflint.rs  generaltst.rs  smoketest.rs
sel4-build/: Cargo.toml
sel4-build/src/: hosted.rs  lib.rs
sel4-build/templates/: CMakeLists.txt
sel4-plat-am335x/: Cargo.toml  build.rs
sel4-plat-am335x/src/: lib.rs
sel4-plat-apq8064/: Cargo.toml  build.rs
sel4-plat-apq8064/src/: lib.rs
sel4-plat-exynos4/: Cargo.toml  build.rs
sel4-plat-exynos4/src/: lib.rs
sel4-plat-exynos5250/: Cargo.toml  build.rs
sel4-plat-exynos5250/src/: lib.rs
sel4-plat-exynos5410/: Cargo.toml  build.rs
sel4-plat-exynos5410/src/: lib.rs
sel4-plat-exynos5422/: Cargo.toml  build.rs
sel4-plat-exynos5422/src/: lib.rs
sel4-plat-hikey/: Cargo.toml  build.rs
sel4-plat-hikey/src/: lib.rs
sel4-plat-imx7sabre/: Cargo.toml  build.rs
sel4-plat-imx7sabre/src/: lib.rs
sel4-plat-kzm/: Cargo.toml
sel4-plat-omap3/: Cargo.toml  build.rs
sel4-plat-omap3/src/: lib.rs
sel4-plat-pc99/: Cargo.toml  build.rs
sel4-plat-pc99/src/: lib.rs
sel4-plat-pc99/tests/: kernel.rs
sel4-plat-rpi3/: Cargo.toml  build.rs
sel4-plat-rpi3/src/: lib.rs
sel4-plat-sabre/: Cargo.toml  build.rs
sel4-plat-sabre/src/: lib.rs
sel4-plat-tk1/: Cargo.toml  build.rs
sel4-plat-tk1/src/: lib.rs
sel4-plat-tx1/: Cargo.toml  Makefile.toml  build.rs
sel4-plat-tx1/src/: lib.rs
sel4-plat-tx2/: Cargo.toml  build.rs
sel4-plat-tx2/src/: lib.rs
sel4-plat-ultra96/: Cargo.toml  build.rs
sel4-plat-ultra96/src/: lib.rs
sel4-plat-wandq/: Cargo.toml  build.rs
sel4-plat-wandq/src/: lib.rs
sel4-plat-zynq7000/: Cargo.toml  build.rs
sel4-plat-zynq7000/src/: lib.rs
sel4-plat-zynqmp/: Cargo.toml  build.rs
sel4-plat-zynqmp/src/: lib.rs
sel4-sys/: CMakeLists.txt  Cargo.toml  Makefile.toml  build.rs
sel4-sys/examples/: smoketest.rs
sel4-sys/src/: lib.rs
sel4-sys/tests/: platform.rs
