[workspace]
members = [
    "elf-preload",
    "sel4-sys", 
    "sel4-build", 
    "sel4-plat-pc99",
    "sel4-plat-sabre",
    "sel4-plat-omap3",
    "sel4-plat-am335x",
    "sel4-plat-exynos4",
    "sel4-plat-exynos5410",
    "sel4-plat-exynos5422",
    "sel4-plat-exynos5250",
    "sel4-plat-apq8064",
    "sel4-plat-wandq",
    "sel4-plat-imx7sabre",
    "sel4-plat-zynq7000",
    "sel4-plat-zynqmp",
    "sel4-plat-ultra96",
    "sel4-plat-tk1",
    "sel4-plat-hikey",
    "sel4-plat-rpi3",
    "sel4-plat-tx1",
    "sel4-plat-tx2",
]
