# This crate implements #SPC-sel4syscrate and #TST-sel4syscrate
[package]
authors = ["Steven Bosnick <sbosnick@sympatico.ca>"]
build = "build.rs"
links = "sel4"
name = "sel4-sys"
version = "0.1.0"
edition = "2018"

[build-dependencies]
sel4-build = { path = "../sel4-build" }

[dependencies]
cty = "0.1.5"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
sel4-build = { path = "../sel4-build" }
tempfile = "3.0.5"
file_diff = "1.0.0"
